Fleshed out the main GET method.
Added some additional packages to support OData (Use the POST method for
this), plus some for experimenting with (Nunject, etc)

--- a/IdentityService/packages.config
+++ b/IdentityService/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.0.0.4001" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="Dapper-Async" version="1.03" targetFramework="net45" />
   <package id="DataAnnotationsExtensions" version="1.0.2.0" targetFramework="net45" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" targetFramework="net45" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
@@ -22,8 +23,12 @@
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="0.1.0-alpha-120815" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.0.1" targetFramework="net45" />
+  <package id="Microsoft.Data.OData.Contrib" version="5.0.1.50813" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
@@ -33,6 +38,10 @@
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NHibernateProfiler" version="1.0.0.953" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
+  <package id="System.Spatial" version="5.0.2" targetFramework="net45" />
   <package id="UcdArch" version="3.3.0.76" targetFramework="net45" />
   <package id="UcdArch.Mvc" version="3.3.0.76" targetFramework="net45" />
   <package id="UcdArch.NHibernate" version="3.3.0.76" targetFramework="net45" />
