--- a/IdentityService/Web.config
+++ b/IdentityService/Web.config
@@ -108,6 +108,14 @@
         <assemblyIdentity name="FluentNHibernate" publicKeyToken="8aa435e3cb308880" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.733" newVersion="1.3.0.733" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0" newVersion="5.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Spatial" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0" newVersion="5.0.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -155,5 +163,4 @@
       <property name="cache.use_query_cache">true</property>
     </session-factory>
   </hibernate-configuration>
- 
 </configuration>
