--- a/IdentityService/Web.config
+++ b/IdentityService/Web.config
@@ -28,6 +28,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RequireHttps" value="false"/>
+    <add key="AppName" value="IdentityService"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
