--- a/IdentityService.Core/IdentityService.Core.csproj
+++ b/IdentityService.Core/IdentityService.Core.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
+    <Compile Include="Domain\AuthToken.cs" />
     <Compile Include="Domain\People.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
