--- a/IdentityService/Web.config
+++ b/IdentityService/Web.config
@@ -30,6 +30,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RequireHttps" value="false"/>
     <add key="AppName" value="IdentityService"/>
+    <add key ="RequireApiToken" value ="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
